WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255384
Fix over-release in ClientConnection::hostAppCodeSigningIdentifier
https://bugs.webkit.org/show_bug.cgi?id=255384
Summary
Fix over-release in ClientConnection::hostAppCodeSigningIdentifier
Luming Yin
Reported
2023-04-12 20:45:16 PDT
<
rdar://problem/107974725
>
Attachments
Add attachment
proposed patch, testcase, etc.
Luming Yin
Comment 1
2023-04-12 20:51:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12686
EWS
Comment 2
2023-04-13 11:26:36 PDT
Committed
262922@main
(e57c4567984b): <
https://commits.webkit.org/262922@main
> Reviewed commits have been landed. Closing PR #12686 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug