Fix over-release in ClientConnection::hostAppCodeSigningIdentifier https://bugs.webkit.org/show_bug.cgi?id=255384 rdar://107974725

Reviewed by Simon Fraser.

In rdar://107931346, we introduced a change that wraps the value returned by CFArrayGetValueAtIndex()
using adoptCF. However, since CFArrayGetValueAtIndex() doesn’t return a retained object, our code will
cause an over-release. To resolve this issue, do not wrap the value returned by CFArrayGetValueAtIndex()
using adoptCF.

Additionally, the keys and values array were incorrectly swapped, causing the returned bundleIdentifier
to be loginwindow instead of the belonging app. Fix this by swapping keys and values so they are in the
correct order.

* Source/WebKit/webpushd/PushClientConnection.mm:
(WebPushD::ClientConnection::bundleIdentifierFromAuditToken):
Swap keys and values so they are in the correct order, and do not wrap the value returned by
CFArrayGetValueAtIndex().

Canonical link: https://commits.webkit.org/262922@main